<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobbyRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kc_background"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".ui.LobbyActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kitty Cards"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lobby"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/hostGameButton"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:text="Host Game"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:backgroundTint="@color/kc_host"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp" />

    <Button
        android:id="@+id/joinGameButton"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:text="Join Game"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:backgroundTint="@color/kc_guest"
        app:layout_constraintTop_toBottomOf="@id/hostGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>