...
        android:focusable="true"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/joinTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join Game"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/backButton"
...
