...
            android:orientation="horizontal"
            android:gravity="center_vertical" />

    </HorizontalScrollView>

    <TextView
        android:id="@+id/turnInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AA7D758D"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
...
